# py-suiteql

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  suiteql.py
